# black-edge

./: .gitignore  ADD_VERCEL_VARS.sh  CRYPTO_5MIN_INTEGRATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  DEPLOY_FULL.md  DEPLOY_NOW.md  ENV_VARS_READY.txt  IMPLEMENTATION_COMPLETE.md  PHASE1_IMPLEMENTATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  QUICK_FIX_FRONTEND.md  RAILWAY_OPENAI_SETUP.md  README.md  TESTING_GUIDE.md  TRADEDOCK_INTEGRATION_COMPLETE.md  docker-compose.yml  package-lock.json  render.yaml  repomix-output.xml  start.sh  🚀_MISE_EN_LIGNE.md
.claude/: settings.local.json
.vercel/: project.json
backend/: .dockerignore  .env.example  .env.local.example  DEPLOY.md  Dockerfile  audit_brain.py  check_stripe.py  config.py  dashboard.py  docker-test.sh  main.py  orchestrator.py  pyproject.toml  render.yaml  requirements-minimal.txt  requirements.txt  start.sh
backend/ai/: council.py
backend/api/: __init__.py  auth.py  dependencies.py  engine_router.py  routes.py  stripe_webhook.py  websocket.py  websocket_manager.py  websocket_v2.py
backend/data/: paper_trading.db
backend/db/: __init__.py  credentials.py  encryption.py  models.py  session.py
backend/engine/: __init__.py  analytics.py  blockchain.py  council.py  crypto_5min_scanner.py  dependency_agent.py  grok_analyzer.py  market_matcher.py  math_core.py  news_collector.py  paper_trading_logger.py  polymarket.py  polymarket_trade.py  risk_calculator.py  trade_executor.py
backend/models/: __init__.py  schemas.py
backend/quant/: __init__.py  config.py  demo.py  demo_old.py  feature_engineer.py  narrative_velocity.py  quant_model.py  whale_tracker.py
backend/quant/council/: __init__.py  agents.py
backend/quant/risk/: __init__.py  manager.py
backend/quant/rl/: __init__.py  environment.py  reward.py
backend/quant/utils/: __init__.py  ring_buffer.py  sentiment.py
backend/routers/: __init__.py  arbitrage.py
backend/scripts/: seed_license.py
backend/services/: README.md  email_service.py
blackedge/: .env.example  .gitignore  README.md  pyproject.toml
blackedge/blackedge/: __init__.py  __main__.py  cli.py  config.py  license.py
blackedge/blackedge/api/: __init__.py  models.py  polymarket_client.py
blackedge/blackedge/core/: __init__.py  orchestrator.py
blackedge/blackedge/db/: engine.py  models.py  repository.py
blackedge/blackedge/engine/: __init__.py  db.py  paper_trader.py
blackedge/blackedge/execution/: ledger.py  paper_trader.py
blackedge/blackedge/ingestor/: orderbook.py  polymarket_client.py  schemas.py
blackedge/blackedge/intelligence/: __init__.py  agent.py  prompts.py  schemas.py
blackedge/blackedge/risk/: __init__.py  kelly.py  portfolio.py
blackedge/blackedge/tui/: __init__.py  app.py  styles.tcss
blackedge/blackedge/tui/widgets/: console_log.py  live_feed.py  portfolio.py
blackedge/tests/: __init__.py
frontend/: .env.example  .env.production  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  manifest.ts  page.tsx  sitemap.ts
frontend/components/: access-modal.tsx  crypto-5min-panel.tsx  footer.tsx  hero-scene.tsx  loading-screen.tsx  market-card.tsx  navbar.tsx  providers.tsx
frontend/hooks/: use-backend-health.ts  use-bot-positions.ts  use-polymarket.ts  use-portfolio.ts  use-toast.ts  use-trade.ts  useBlackEdge.ts
frontend/lib/: constants.ts  firebase.ts  stripe.ts  wagmi.ts
(+33 files in other folders)
