[tool.poetry]
name = "blackedge"
version = "0.1.0"
description = "Bot de Trading Autonome pour Marchés Prédictifs (Polymarket)"
authors = ["Black Edge Team"]
readme = "README.md"
packages = [{include = "blackedge", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
# HTTP & WebSockets
httpx = ">=0.27.0"
websockets = "^12.0"
# Validation & Config
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
# TUI & CLI
rich = "^13.0.0"
textual = "^0.47.0"
typer = {extras = ["all"], version = "^0.12.0"}
# Base de données
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
aiosqlite = "^0.19.0"
# Résilience
tenacity = "^8.2.0"
# Logging
structlog = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.8.0"
black = "^24.1.0"
ruff = "^0.1.14"

[tool.poetry.scripts]
blackedge = "blackedge.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]
